# fukura

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FUKURAHUB_REQUIREMENTS.md  FUKURA_DEV_COMMAND_REFERENCE.md  FUKURA_REPO_APT_INTEGRATION.md  FUKURA_REPO_SITE_DEPLOY_TRIGGER.md  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SITE_CONTENT_UPDATE.md  TIME_BASED_RECORDING_FEATURE.md  deny.toml  deny.toml.bak  dist-workspace.toml  dist.toml  docker-compose.yml  test_time_recording.rs
.github/workflows/: apt-deploy.yml  ci.yml  docker.yml  release.yml  rust-ci.yml  site-deploy.yml
benches/: search_benchmark.rs
docs/: GUI_OVERLAY_TECHNICAL.md  PERFORMANCE_ANALYSIS.md  README.md  security.md
docs/developer/: architecture.md  performance.md  setup.md
docs/user-guide/: browser-integration.md  getting-started.md
installers/linux/: postinst.sh
installers/macos/: postinstall.sh
installers/windows/: Product.wxs
scripts/: dev-setup.sh
scripts/linux/: build-apt-repo.sh
scripts/windows/: sign.ps1
src/: activity.rs  activity_monitor.rs  activity_storage.rs  browser.rs  cli.rs  config.rs  daemon.rs  daemon_service.rs  directory_monitor.rs  file_watcher.rs  hooks.rs  index.rs  lib.rs  main.rs  models.rs  notification.rs  pack.rs  performance.rs  redaction.rs  remote_search.rs  repo.rs  sync.rs  time_parser.rs
src/application/: activity_monitor.rs  config_cmd.rs  daemon.rs  daemon_service.rs
src/domain/: activity.rs  activity_storage.rs  models.rs  pack.rs  redaction.rs
src/infrastructure/: directory_monitor.rs  file_watcher.rs  notification.rs  remote_search.rs  sync.rs
src/shared/: performance.rs
src/ui/: browser.rs  cli.rs
tests/: basic.rs  browser.rs  cli_ux_tests.rs  config_tests.rs  github_actions.rs  integration.rs  performance.rs  security.rs  time_based_recording.rs
