[package]
name = "fukura"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
flate2 = { version = "1.0", features = ["zlib"] }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tantivy = { version = "0.19", default-features = false, features = ["mmap", "stopwords"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
colored = "2.1"
crossterm = "0.27"
ratatui = "0.26"
fs2 = "0.4"
tempfile = "3.10"
hex = "0.4"
dialoguer = { version = "0.11", features = ["editor"] }
comfy-table = "=7.1.4"
open = "5.1"
regex = "1.10"
atty = "0.2"
pulldown-cmark = "0.9"
html-escape = "0.2"
tracing = "0.1"
