[package]
name = "fukura"
version = "0.3.5"
edition = "2021"
description = "An intelligent knowledge management system with automatic error capture and solution tracking"
license = "Apache-2.0"
repository = "https://github.com/boostbit-inc/fukura"
homepage = "https://fukura.dev"
documentation = "https://docs.rs/fukura"
keywords = ["cli", "knowledge-base", "search", "troubleshooting", "documentation", "error-capture", "automation", "daemon"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
directories = "6.0"
flate2 = { version = "1.0", features = ["zlib"] }
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tantivy = { version = "0.25", default-features = false, features = ["mmap", "stopwords"] }
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "process"] }
toml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde"] }
colored = "3.0"
crossterm = "0.29"
ratatui = "0.29"
fs2 = "0.4"
tempfile = "3.10"
hex = "0.4"
dialoguer = { version = "0.12", features = ["editor"] }
comfy-table = "7.2"
open = "5.1"
regex = "1.10"
# atty = "0.2"  # Removed: using is-terminal instead
pulldown-cmark = "0.13"
html-escape = "0.2"
tracing = "0.1"
which = "6.0"
is-terminal = "0.4"  # Modern replacement for atty
notify-rust = "4.11"  # OS notifications
walkdir = "2.5"  # Directory traversal for stats
notify = "6.1"  # File system monitoring
urlencoding = "2.1"  # URL encoding for search queries

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
debug = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on macOS

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
